Changes Version 0.0.7
  o A bug was fixed that did not check properly the number of predictable observations when the lag number was larger than 1 and a Day argument was specified
  o The function numberPredictableObservations() shows the output now also per subject in addition to the total number of predictable observations
  o A bug was fixed within the checkPoseteriorsNA() function, when resetting of values had to be performed, this reset was not properly passed to the function that determines convergence (to indicate that this solution did not converge).


Changes Version 0.0.8
  o The threshold to determine wheter a covariance matrix is non-invertible was changed from 1.0e-200 to 1.0e-100
  o A warning was added to alert users in case the data they input has not enough variance for any individuals
  o A bug was fixed that prevented plots of VAR coefficients from being displayed
  